--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,18 @@
     font-family: "Roboto", sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;  
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+text-decoration: underline;
+}
+
 body {
    max-width: 100vw;
    overflow-x:hidden; 
@@ -100,6 +112,66 @@ button:active {
     text-decoration: none;
 }
 
+.btn__menu {
+    background-color: transparent;
+    border: none;
+    font-size: 40px;
+    text-align: center;
+    color: #7342d6
+}
+
+.menu__backdrop {
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 300ms ease;
+}
+
+.menu--open .menu__backdrop {
+    visibility: visible;
+    opacity: 1
+}
+
+.menu--open {
+max-height: 100vh;
+overflow-y: hidden;
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__list {
+    padding: 32px 0;
+}
+
+.menu__link {
+    color: white;
+    font-size: 40px;
+}
+
+.btn__menu--close {
+    position:absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
+}
+
+/* Landing */
+
 #landing {
 background-color: rgba(115, 66, 214, 0.1);
 }
@@ -188,7 +260,6 @@ header {
     width: calc(100%/3);
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction:column;
 }
 
@@ -213,13 +284,13 @@ header {
 .highlight__subtitle {
     font-size: 20px;
     margin-bottom: 16px;
+    text-align: center;
 }
 
 /* Features */
 
 #features {
     background-color: rgba(115, 66, 214, 0.1);
-    height: 1000vh;
     padding-top: 8vw;
 }
 
@@ -270,3 +341,109 @@ header {
     color: #bfbfbf;
 }
 
+.books{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+/* Explore */
+
+#explore {
+    background-color:rgba(115, 66, 214, 0.1);
+}
+
+.explore__header--wrapper {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.no-cursor {
+    cursor: not-allowed;
+}
+
+/* Footer */
+
+footer {
+    background-color: #242424;
+
+}
+
+footer .row {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.footer__logo--img {
+    width: 160px;
+    filter: grayscale(1) invert(1);
+}
+
+.footer__link,
+.footer__copyright {
+    color: #fff;
+    
+}
+
+.footer__list {
+    margin: 20px 0;
+}
+
+.footer__logo {
+    display: flex;
+}
+
+.footer__link {
+    padding: 0 8px;
+}
+
+@media (max-width: 550px) {
+    .nav__links {
+        display: none;
+    }
+
+    .btn__menu {
+        display:block;
+    }
+}
+
+/* SMALL PHONES, TABLETS, LARGE SMARTPHONES */
+@media (max-width:768px) {
+    .header__description {
+        padding: 0 24px;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 26px;
+    }
+
+    button {
+        font-size: 18px;
+    }
+
+    .nav__links {
+        display: none;
+    }
+
+    .book {
+        width: 50%;
+    }
+
+    .highlight {
+        width: 100%;
+    }
+
+    .highlight:not(:last-child) {
+        margin-bottom: 24px;
+    }
+
+    .highlight__wrapper {
+        flex-wrap: wrap;
+        margin-bottom: 24px;
+    }
+}
